<resources>
    <string name="app_name">QazaqByExample</string>
    <string name="title_activity_login">Sign in</string>
    <string name="welcomeText">Qazaq by Example - простой и доступный метод отточить разговорный казахский. Изучайте самые распространённые
    языковые структуры и Вы с лёгкостью и интересом овладеете казахским языком!</string>
    <string name="no_results">Ничего не найдено.</string>
    <string name="translateOpp">Теперь доступна функция мгновенного перевода! Если вы встретили незнакомое слово, просто выделите его и во всплывшем окне нажмите на кнопку "Перевести". &#xD;*для использования функции, вам необходимо иметь интернет-подключение.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="city">&#160;&#160;Қала көшелерінде\n</string>
    <string name="cafe">&#160;&#160;Кафеде\n</string>
    <string name="doctors">&#160;&#160;Ауруханада\n</string>
    <string name="family">&#160;&#160;Отбасымен\n</string>
    <string name="food">&#160;&#160;Тамақ әзірлегенде\n</string>
    <string name="friendship">&#160;&#160;Достармен\n</string>
    <string name="intr_yourself">&#160;&#160;Танысқанда\n</string>
    <string name="school">&#160;&#160;Мектепте\n</string>
    <string name="shopping">&#160;&#160;Дүкенде\n</string>
    <string name="travelling">&#160;&#160;Саяхатта\n</string>
    <string name="city01">Ең жақын полиция бөлімі қай жерде/қайда орналасқан?</string>
    <string name="city01R">Где расположено ближайшее отделение полиции?</string>
    <string name="city02">Тұңғыш президенттің мұражайына дейін жолақысы қанша?</string>
    <string name="city02R">Сколько стоит проезд до музея первого президента?</string>
    <string name="city03">Базарлық (балалар ойыншығы, тәттілер) қайда сатып алуға болады?</string>
    <string name="city03R">Где можно купить сувениры (детские игрушки, сладости)?</string>
    <string name="city04">Мына көлік қалалық емханаға барады ма?</string>
    <string name="city04R">Эта маршрутка едет до городской больницы?</string>
    <string name="city05">“Мега Silk Way” сауда орталығының аялдамасына қандай көлік жүреді?</string>
    <string name="city05R">Какой автобус едет до остановки торгового центра "Мега"?</string>
    <string name="city06">Кешіріңіз, уақытыныз болса, мені суретке түсіріп жібересіз бе?</string>
    <string name="city06R">Извините, если у вас есть время, сфотографируете меня?</string>
    <string name="city07">Ең жақын анықтама бюросы Сауран және Бөгенбай батыр көшесінің қиылысында.</string>
    <string name="city07R">Ближайшая справочная расположена на пересечении улиц Сауран и Богенбай батыр.</string>
    <string name="city08">Панфилов паркіне жаяу қалай өтуге болады?</string>
    <string name="city08R">Как можно пешком пройти до парка Панфилова?</string>
    <string name="city09">Мен орталыққа жақынырақ орналасқан аудандардан екі бөлмелі пәтер іздеп жүрмін.</string>
    <string name="city09R">Я ищу двух-комнатную квартиру в районах недалеко от центра.</string>
    <string name="city10">Ұлттық дәстүрлерге арналған фестиваль өткен аптадан бері болып жатыр.</string>
    <string name="city10R">Фестиваль, посвящённый народным традициям, проводится с прошлой недели.</string>
    <string name="cafe01">Қандай тапсырыс бересіз?</string>
    <string name="cafe01R">Что будете заказывать?</string>
    <string name="cafe02">Кешіріңіз, біздің чегімізді әкеліп бересіз бе?</string>
    <string name="cafe02R">Извините, можете принести наш чек?</string>
    <string name="cafe03">Осы жерде қаладағы ең дәмді пиццаны әзірлейді.</string>
    <string name="cafe03R">Здесь готовят лучшую пиццу в городе.</string>
    <string name="cafe04">Өкінішке орай, жазғы дәмханада бос орын жоқ.</string>
    <string name="cafe04R">На летнике, к сожалению, нет свободных мест.</string>
    <string name="cafe05">Мен бүгінгі кешке үстелді өз атыма қалдырсам деп едім.</string>
    <string name="cafe05R">Я хочу зарезервировать столик на сегодняшний вечер.</string>
    <string name="cafe06">Жақсы жұмыс үшін даяршыға шайлық/сыйлық тиеселі.</string>
    <string name="cafe06R">Официанту причитаются чаевые за хорошую работу.</string>
    <string name="cafe07">Мәзірдегі қандай тамақты дәм татуға кеңес бересіз?</string>
    <string name="cafe07R">Какое блюдо в меню вы посоветуете попробовать?</string>
    <string name="cafe08">Сол жерғе барайық. Онда ылғи/үнемі сазды да жанды әуенге балқисыз.</string>
    <string name="cafe08R">Пойдем туда, там всегда играет очень красивая живая музыка.</string>
    <string name="cafe09">Осы кафеде сенбі сайын шәйге/шайға акциялар өткізіледі.</string>
    <string name="cafe09R">В этом кафе действуют акции на чай по субботам.</string>
    <string name="cafe10">Осы кафеде сапалы әрі тез қызмет көрсетіледі.</string>
    <string name="cafe10R">В этом кафе качественное и оперативное обслуживание.</string>
    <string name="doctors01">Аузыңызды/көзіңізді ашыңыз/жабыңыз.</string>
    <string name="doctors01R">Откройте/закройте рот/глаза.</string>
    <string name="doctors02">Мен жазылып келе жатырмын. Мені жақында шығарады.</string>
    <string name="doctors02R">Я выздоравливаю. Меня скоро выпишут.</string>
    <string name="doctors03">Сіздің қай жеріңіз ауырып тұр, көрсетіңізші.</string>
    <string name="doctors03R">Покажите, что у вас болит.</string>
    <string name="doctors04">Оның аллергиясы болғандықтан, оған цитрус жеуге болмайды.</string>
    <string name="doctors04R">Ей нельзя кушать цитрусы, так как у неё аллергия.</string>
    <string name="doctors05">Сіз талдау үшін қан (несеп, шәует) тапсыруыңыз қажет.</string>
    <string name="doctors05R">Вам нужно сдать кровь(моча, сперма) для анализов.</string>
    <string name="doctors06">Сіздің дене қызуыңыз бар.</string>
    <string name="doctors06R">У вас температура.</string>
    <string name="doctors07">Ол ауырып қалды. Қатты суық тиіп қалыпты.</string>
    <string name="doctors07R">Он заболел. Сильно простудился.</string>
    <string name="doctors08">Алдымен, қолыңызды рентгенге түсіру керек.</string>
    <string name="doctors08R">Для начала надо сделать рентген руки.</string>
    <string name="doctors09">Оның жүрегі ауырады, қан қысымы да жоғары.</string>
    <string name="doctors09R">У него болит сердце и высокое кровяное давление.</string>
    <string name="doctors10">Жүзіңіз бозарып тұр ғой, бір жеріңіз ауырып тұр ма?</string>
    <string name="doctors10R">Вы ведь побледнели, у вас что-то болит?</string>
    <string name="family01">Оның отбасы үлкен екен.</string>
    <string name="family01R">У него/неё, оказывается, большая семья.</string>
    <string name="family02">Қазір әкем мен анамның бір келіні, бір күйеу баласы және екі немересі бар.</string>
    <string name="family02R">Сейчас у моих мамы и папы одна сноха, один зять и двое внуков.</string>
    <string name="family03">Ол менің жеңгем Айнагүл, ағамның әйелі.</string>
    <string name="family03R">Она моя невестка Айнагуль, жена моего брата.</string>
    <string name="family04">Ол менің жездем Айдар, әпкемнің жұбайы.</string>
    <string name="family04R">Он мой зять Айдар, муж моей сестры.</string>
    <string name="family05">Сіздің балаларыңыз нешеде?</string>
    <string name="family05R">Сколько лет вашим детям?</string>
    <string name="family06">Олардың асырап алған балалары бар.</string>
    <string name="family06R">У них есть усыновлённые/удочерённые дети.</string>
    <string name="family07">Келіннің енесі оған үй шаруашылығымен көмектеседі.</string>
    <string name="family07R">Свекровь невестки помогает ей с домашним хозяйством.</string>
    <string name="family08">Оның жұбайының ата-аналары жетпіске таяп қалды.</string>
    <string name="family08R">Родителям его/её супруга/супруги почти семьдесят.</string>
    <string name="family09">Біз үйде бесеуміз.</string>
    <string name="family09R">Нас в семье пятеро.</string>
    <string name="family10">Үйге қонаққа кел, барлығымен таныстырамын. Отбасым өте қонақжай.</string>
    <string name="family10R">Приходи домой в гости, со всеми познакомлю. Моя семья очень гостеприимная.</string>
    <string name="food01">Бауырсақ жасау үшін бізге ақ ұн, жылы сүт, сары май, ашытқы, түз және өсімдік май керек.</string>
    <string name="food01R">Чтобы приготовить баурсаки нам нужны белая мука, тёплое молоко, сливочное масло, дрожжи, соль и растительное масло.</string>
    <string name="food02">Егер бауырсақты жұмыртқасыз жасасаңыз, жұмсағырақ болады.</string>
    <string name="food02R">Баурсаки будут мягче, если их готовить без яиц.</string>
    <string name="food03">Осы бәліштің қамыры дәмді болу үшін барлық ингредиенттерді жақсылап араластыру керек.</string>
    <string name="food03R">Чтобы тесто этого пирога получилось вкусным, надо хорошо перемешать все ингредиенты.</string>
    <string name="food04">Ұнды шұңғыл аяққа салып, жұмсақ қамыр илеңіз.</string>
    <string name="food04R">Высыпьте муку в глубокую миску и замесите мягкое тесто.</string>
    <string name="food05">Қамыр бір сағат көтерілгенде, мен оны дереу оқтаумен жаямын.</string>
    <string name="food05R">После того как тесто за час поднимется, я его сразу раскатываю скалкой.</string>
    <string name="food06">Апам осы көжеге бір шәй қасық бұрыш қосқан еді.</string>
    <string name="food06R">Моя бабушка добавляла в этот суп чайную ложку перца.</string>
    <string name="food07">Тағамдарымның дәмін татып көріп, бағасын беретін менің отбасым.</string>
    <string name="food07R">Моя семья пробует мои блюда и даёт им оценку.</string>
    <string name="food08">Бешпармаққа тұздықты қалай әзірлейсін?</string>
    <string name="food08R">Как ты готовишь подливу для бешпармака?</string>
    <string name="food09">Cалатқа майонез қосайын ба?</string>
    <string name="food09R">Добавить майонез в салат?</string>
    <string name="food10">Бәлішті алдын-ала қыздырылған пеште жарты сағат пісіріңіз.</string>
    <string name="food10R">Выпекайте пирог полчаса в заранее разогретой духовке.</string>
    <string name="friends01">Шың достар қиыншылықта білінеді.</string>
    <string name="friends01R">Настоящие друзья познаются в беде.</string>
    <string name="friends02">Мен достарымды сағындым.</string>
    <string name="friends02R">Я соскучился по своим друзьям.</string>
    <string name="friends03">Айына бірнеше рет достармен кездесуге тырысамыз.</string>
    <string name="friends03R">Мы с друзьями стараемся видеться несколько раз в месяц.</string>
    <string name="friends04">Достықты сақтау үшін достарымен адал әрі аққөңіл бол.</string>
    <string name="friends04R">Чтобы сохранить дружбу, будь справедлив и честен с друзьями.</string>
    <string name="friends05">Достарын өміріңе қуаныш әкелгендіктен, оларды бағалау керек.</string>
    <string name="friends05R">Так как друзья приносят радости в твою жизнь, их надо ценить.</string>
    <string name="friends06">Қуанышқа орай, анам маған достармен кешке киноға шығуға рұқсат берген.</string>
    <string name="friends06R">К счастью, мама разрешила мне выйти вечером в кино с друзьями.</string>
    <string name="friends07">Ата-аналарымның достары аз, алайда барлығы расында адал достар.</string>
    <string name="friends07R">У моих родителей мало друзей, но зато они все действительно преданные друзья.</string>
    <string name="friends08">Ол Дианамен дос болғалы бері көңіл-күйі жақсартылған.</string>
</resources>