<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textDefault"
    tools:context="com.aishabibiadambek.user.qazaqbyexample.City"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:theme="@style/ThemeOverlay.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_weight="0.04"
        android:background="@color/colorPrimaryDark"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/textDefault"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/city"
            android:textColor="@color/textDefault"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- FIRST -->

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyTextViewStyle"
                android:text="@string/city01"
                android:textColor="@color/indigo"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyTextViewStyle"
                android:text="@string/city01R"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <include android:id="@+id/btn1" layout="@layout/button"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/textAccent" />

            <!-- SECOND -->

            <TextView
                android:id="@+id/tv3"
                style="@style/MyTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city02"
                android:textColor="@color/indigo"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv4"
                style="@style/MyTextViewStyle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/city02R"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <include android:id="@+id/btn2" layout="@layout/button"/>

            <!-- THIRD -->

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/textAccent" />

            <TextView
                android:id="@+id/tv5"
                style="@style/MyTextViewStyle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/city03"
                android:textColor="@color/indigo"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv6"
                style="@style/MyTextViewStyle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/city03R"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <include android:id="@+id/btn3" layout="@layout/button"/>

            <!-- FORTH -->

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/textAccent" />

            <TextView
                android:id="@+id/tv7"
                style="@style/MyTextViewStyle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/city04"
                android:textColor="@color/indigo"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv8"
                style="@style/MyTextViewStyle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/city04R"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <include android:id="@+id/btn4" layout="@layout/button"/>

            <!-- FIFTH -->

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/textAccent" />

            <TextView
                android:id="@+id/tv9"
                style="@style/MyTextViewStyle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/city05"
                android:textColor="@color/indigo"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv10"
                style="@style/MyTextViewStyle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="start"
                android:text="@string/city05R"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <include android:id="@+id/btn5" layout="@layout/button"/>

            <!-- SIXTH -->

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/textAccent" />

            <TextView
                android:id="@+id/tv11"
                android:layout_width="match_parent"
                style="@style/MyTextViewStyle"
                android:layout_height="wrap_content"
                android:text="@string/city06"
                android:textColor="@color/indigo"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv12"
                android:layout_width="match_parent"
                style="@style/MyTextViewStyle"
                android:layout_height="wrap_content"
                android:text="@string/city06R"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <include android:id="@+id/btn6" layout="@layout/button"/>

            <!-- SEVENTH -->

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/textAccent" />

            <TextView
                android:id="@+id/tv13"
                style="@style/MyTextViewStyle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/city07"
                android:textColor="@color/indigo"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv14"
                style="@style/MyTextViewStyle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/city07R"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <include android:id="@+id/btn7" layout="@layout/button"/>

            <!-- EIGHTH -->

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/textAccent" />

            <TextView
                android:id="@+id/tv15"
                style="@style/MyTextViewStyle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/city08"
                android:textColor="@color/indigo"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv16"
                style="@style/MyTextViewStyle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/city08R"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <include android:id="@+id/btn8" layout="@layout/button"/>

            <!-- NINTH -->


            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/textAccent" />

            <TextView
                android:id="@+id/tv17"
                style="@style/MyTextViewStyle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/city09"
                android:textColor="@color/indigo"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv18"
                style="@style/MyTextViewStyle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/city09R"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <include android:id="@+id/btn9" layout="@layout/button"/>

            <!-- TENTH -->

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/textAccent" />

            <TextView
                android:id="@+id/tv19"
                style="@style/MyTextViewStyle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/city10"
                android:textColor="@color/indigo"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv20"
                style="@style/MyTextViewStyle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/city10R"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <include android:id="@+id/btn10" layout="@layout/button"/>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
